Setup Cros configuration to allow between railway and spring requests (#85)